# django_learning

./: README.md  pyproject.toml
project/: .gitignore  dockerfile  requirements.txt
project/card/: forms.py  models.py  urls.py  views.py
project/card/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
project/templates/: base.html
project/templates/card/: create.html  index.html
