[project]
name = "my-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "h1610", email = "takadahiroto6@gmail.com" }
]
dependencies = [
    "django>=5.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
